maze.wallfindfollow.WallFindFollowMaze.scala.error
Compilation error:
WallFindFollowMaze:4: error: not found: value random3
    i=random3()
      ^